# test

./: 250 numbers  CMakeLists.txt  Makefile  author  mk  printing.c  random numbers
ft_checker/: checker.c  main.c
ft_checker/includes/: checker.h
ft_checker/srcs/: bigint_base.c  checker.c  commander.c  errors.c  reader.c  spliter.c  stack_handler.c
ft_push_swap/: main.c
ft_push_swap/srcs/: all_to_a.c  all_to_b.c  check_order.c  cleaner.c  ft_is_slice.c  get_commands.c  insertion_sort.c  main_struct.c  middle_handler.c  optimize_way.c  ptr_to_a.c  ptr_to_top_b.c  push_swap.c  set_steps.c  small_sort.c  sort_map.c  timesort.c  timsort.c  timsort_merge.c  vector.c  vector_arr.c
includes/: checker.h  push_swap.h
libft/: CMakeLists.txt  Makefile  errors.c  ft_abs.c  ft_abs_ll.c  ft_atoi.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isnumber.c  ft_isprint.c  ft_issign.c  ft_isspace.c  ft_itoa.c  ft_itoa_llu.c  ft_itoa_lu.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  (+30 more)
printf/: CMakeLists.txt  Makefile
printf/floats/: big_math_b2b.c  big_math_b2n.c  frac_math.c  fractional_base.c  fractional_to_str.c  get_mant_len.c  initialize_float.c  integral_base.c  integral_creation.c  integral_to_str.c
printf/includes/: fractional.h  integral.h  printf.h  xray.h
printf/libft/: errors.c  ft_abs.c  ft_bzero.c  ft_itoa.c  ft_itoa_llu.c  ft_itoa_lu.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putstr.c  ft_putstr_fd.c  ft_str_tolower.c  ft_str_toupper.c  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_strjoin.c  ft_strlen.c  ft_strnew.c  ft_tolower.c  ft_toupper.c
printf/srcs/: chars_conversion.c  chars_printing.c  check_info.c  errors.c  float_conversion.c  float_flags_cases.c  float_get_arg.c  ft_bzero.c  ft_itoa.c  ft_memset.c  ft_str_tolower.c  ft_strcat.c  ft_strchr.c  ft_strnew.c  integer_conversion.c  integer_flags_cases.c  integer_printing.c  integer_sign_prefix.c  nbr_len.c  nbr_len_iu.c  nbr_len_llu.c  nbr_len_lu.c  parser.c  parser_flags.c  percent_case.c  pointer_conversion.c  printf.c  processor.c
