cmake_minimum_required(VERSION 3.16)
project(ftprintf C)

set(CMAKE_C_STANDARD 11)
include_directories(includes)
add_library(ftprintf STATIC
        floats/big_math_b2b.c
        floats/big_math_b2n.c
        floats/frac_math.c
        floats/fractional_base.c
        floats/fractional_to_str.c
        floats/get_mant_len.c
        floats/initialize_float.c
        floats/integral_base.c
        floats/integral_creation.c
        floats/integral_to_str.c
        libft/ft_abs.c
        libft/ft_bzero.c
        libft/ft_isdigit.c
        libft/ft_itoa.c
        libft/ft_itoa_lu.c
        libft/ft_itoa_llu.c
        libft/ft_memset.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_str_tolower.c
        libft/ft_str_toupper.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strcpy.c
        libft/ft_strjoin.c
        libft/ft_strlen.c
        libft/ft_strnew.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        srcs/chars_conversion.c
        srcs/chars_printing.c
        srcs/check_info.c
        srcs/errors.c
        srcs/float_conversion.c
        srcs/float_flags_cases.c
        srcs/float_get_arg.c
        srcs/integer_flags_cases.c
        srcs/integer_conversion.c
        srcs/integer_printing.c
        srcs/integer_sign_prefix.c
        srcs/nbr_len.c
        srcs/nbr_len_iu.c
        srcs/nbr_len_lu.c
        srcs/nbr_len_llu.c
        srcs/parser.c
        srcs/parser_flags.c
        srcs/percent_case.c
        srcs/pointer_conversion.c
        srcs/printf.c
        srcs/processor.c
        includes/fractional.h
        includes/integral.h
        includes/printf.h
        includes/xray.h)